added travis deploy config

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,18 @@ before_install:
 
 script:
   - docker run -e CI=true humober/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  # elastic beanstalk name
+  app: "runnerdev"
+  env: "Runnerdev-env"
+  # S3 name
+  bucket_name: "elasticbeanstalk-us-east-1-545851479096"
+  # Same as app name above
+  bucket_path: "runnerdev"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
